--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
 	background-image: url("http://www.thatericalper.com/wp-content/uploads/2014/04/Jerryseinfeld.jpg");
 	background-size: 45%;
 	background-attachment: fixed;
+	font-family: 'Roboto Slab', serif;
 }
 .title p {
 	color: #E30922;
@@ -17,13 +18,12 @@ body {
 	font-family: 'Roboto Slab', serif;
 	font-size: 4em;
 	margin-bottom: 0;
-	margin-top: 1em;
+	margin-top: 0.5em;
 	text-align: center;
 }
 .quote {
 	color: #E30922;
 	text-shadow: 2px 2px #fcd920;
-	font-family: 'Roboto Slab', serif;
 	font-size: 1.5em;
 	margin: 0 auto;
 	text-align: center;
@@ -35,9 +35,10 @@ body {
 	border-radius: 10px;
 	background-color: #E30922;
 	opacity: 0.9;
-	font-family: 'Roboto Slab', serif;
 	text-align: center;
 	padding: 10px 0;
+	border-color: #000000;
+	border-style: solid;
 }
 .question-1 p, .question-1 h2 {
 	margin: 0 auto;
@@ -56,10 +57,21 @@ body {
 	font-size: 1em;
 	text-align: left;
 	padding: 20px 0;
+	border-color: #000000;
+	border-style: solid;
 }
 input {
 	margin: 0 2em;
 }
 .submit {
-
+	height: 3em;
+	width: 8em;
+	background-color: #fcd920;
+	margin: 0 auto;
+	opacity: 0.9;
+	text-align: center;
+	border-radius: 10px;
+	padding: 10px 0;
+	border-color: #E30922;
+	border-style: solid;
 }
