--- a/css/main.css
+++ b/css/main.css
@@ -90,3 +90,70 @@ input {
 	border-color: #E30922;
 	border-style: solid;
 }
+/* Media Queries */
+@media only screen and (max-width: 1240px) {
+	.question-title {
+		height: 5em;
+		width: 30em;
+	}
+	.question-title p, .answer {
+		font-size: 15px;
+	}	
+	.quote, .question-title h2 {
+		font-size: 1.25em;
+	}
+	.title p {
+		font-size: 3.5em;
+	}
+}
+@media only screen and (max-width: 1050px) {
+	.question-title {
+		height: 4em;
+		width: 25em;
+	}
+	.answer {
+		height: 4em;
+		width: 20em ;
+	}
+	.question-title p {
+		font-size: 15px;
+	}	
+	.quote, .question-title h2 {
+		font-size: 1em;
+	}
+	.title p {
+		font-size: 2.5em;
+	}
+	.submit, .new-game {
+		height: 3em;
+		width: 7em;
+	}
+	button[type=text] {
+		height: 2em;
+		width: 5em;
+		font-size: 12px;
+	}
+}
+@media only screen and (max-width: 870px) {
+	.question-title {
+		height: 4em;
+		width: 20em;
+	}
+	.question-title p, .answer{
+		font-size: 12px;
+	}	
+	.quote, .question-title h2 {
+		font-size: 15px;
+	}
+	.answer {
+		width: 20em;
+	}
+	.title p {
+		font-size: 2.5em;
+	}
+}
+@media only screen and (max-width: 640px) {
+	body {
+		background-image: none;
+	}
+}
