removed & from less syntax

--- a/css/index.less
+++ b/css/index.less
@@ -46,11 +46,11 @@ body {
 	padding: 10px 0;
 	border-color: @black;
 	border-style: solid;
-	&p{
+	p {
 		margin: 0 auto;
 		font-size: 1.25em;
 	}
-	&h2{
+	h2 {
 		margin: 0 auto;
 	}
 }
@@ -103,10 +103,10 @@ input {
 	.question-title {
 		height: 5em;
 		width: 30em;
-		&p {
+		p {
 			font-size: 15px;
 		}
-		&h2 {
+		h2 {
 			font-size: 1.25em;
 		}
 	}
@@ -124,10 +124,10 @@ input {
 	.question-title {
 		height: 4em;
 		width: 25em;
-		&p {
+		p {
 			font-size: 15px;
 		}
-		&h2 {
+		h2 {
 			font-size: 1em;
 		}
 	}
@@ -155,10 +155,10 @@ input {
 	.question-title {
 		height: 4em;
 		width: 20em;
-		&p {
+		p {
 			font-size: 12px;
 		}
-		&h2 {
+		h2 {
 			font-size: 15px;
 		}
 	}
